<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="team">Команда</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="vacancy">Вакансия</string>
    <string name="empty_list">Список пуст</string>
    <string name="unable_to_get_favorite_vacancy">Не удалось получить список вакансий</string>
    <string name="unable_to_get_list">Не удалось получить список</string>
    <string name="unable_to_load_new_page">Не удалось загрузить новую страницу</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="industry_option">Выбор отрасли</string>
    <string name="workplace_option">Выбор места работы</string>
    <string name="region_option">Выбор региона</string>
    <string name="country_option">Выбор страны</string>
    <string name="choose">Выбрать</string>
    <string name="team_title">Над приложением работали</string>
    <string name="dev_1">Дмитрий Баранюк</string>
    <string name="dev_2">Селин Эглендже</string>
    <string name="dev_3">Михаил Тресцов</string>
    <string name="dev_4">Катерина Скорова</string>
    <string name="dev_5">Анна Кирицева</string>
    <string name="dev_6">Алдун Сардарлы</string>
    <string name="experience_title">Требуемый опыт</string>
    <string name="description_title">Описание вакансии</string>
    <string name="key_skills_title">Ключевые навыки</string>
    <string name="search_hint">Введите запрос</string>
    <string name="empty_list_error">Не удалось получить \n список вакансий</string>
    <string name="no_internet_error">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="vacancy_not_found">Вакансия не найдена или удалена</string>
    <string name="russia">Россия</string>
    <string name="industry_hint">Введите отрасль</string>
    <string name="opt">Выбрать</string>
    <string name="empty_industry">Такой отрасли нет</string>
    <string name="region_hint">Введите регион</string>
    <string name="region_not_found">Такого региона нет</string>
    <string name="empty_list_region">Не удалось получить список</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="hide_without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="salary_from">от %1$s</string>
    <string name="salary_to">до %1$s</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_currency"> %1$s</string>
    <string name="vacancies_count_found">Найдено %1$d вакансий</string>
    <string name="vacancies_no_such">Таких вакансий нет</string>
</resources>
