<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:tint="?attr/colorOnPrimary"
        app:title="@string/filter_settings"
        app:titleTextAppearance="@style/TitleMedium22"
        app:titleTextColor="?attr/colorOnPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/workplace"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageButton
            android:id="@+id/workplace_arrow"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sixty_four"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintEnd_toEndOf="@id/workplace"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/industry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/industry"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/workplace">

        <ImageButton
            android:id="@+id/industry_arrow"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sixty_four"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintEnd_toEndOf="@id/industry"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="Тестовая кнопка для отправки фильтров"
        app:layout_constraintTop_toBottomOf="@id/industry"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/testEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/testButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
